# ova-lib

./: .clang-tidy  .gitignore  AUTOMATED_ISSUE_CREATION.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  HOW_TO_CREATE_ISSUES.md  ISSUES_CREATED_SUMMARY.md  ISSUES_DRAFT.md  ISSUES_QUICK_REFERENCE.md  ISSUES_SUMMARY.md  ISSUE_DRAFTS_INDEX.md  README.md  README_ISSUE_DRAFTS.md  START_HERE.md  SUCCESS.md  conanfile.py  create_issues.py  create_issues.sh  create_issues_auto.py  create_issues_no_labels.py  notes.md  ova-lib.pc.in  vcpkg.json
.github/workflows/: ci.yml  copilot-setup-steps.yml  daily-perf-improver.lock.yml  daily-perf-improver.md  daily-plan.lock.yml  daily-plan.md  daily-repo-status.lock.yml  main.yml  weekly-research.lock.yml  weekly-research.md
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install.sh
_codeql_build_dir/include/: bloom_filter.h  deque.h  graph.h  heap.h  list.h  map.h  ova.h  queue.h  set.h  solver.h  sort.h  stack.h  tree.h  trie.h  types.h
build-avx/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install.sh  ova-lib.pc
build-avx-noopt/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install.sh
build-avx-noopt/include/: set.h  solver.h  tree.h
build-avx/Testing/Temporary/: CTestCostData.txt
build-avx/include/: deque.h  matrix.h
build-noopt/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install.sh
build-noopt/include/: map.h
docs/: README.md  architecture.md  benchmarks.md  best-practices.md  bloom_filter.md  containers.md  graph.md  matrix.md  recommendations-summary.md  recommendations.md  set.md  skip_list.md  solver-integer.md  solver-simplex.md  sorting.md  trees.md  trie.md
docs/diagrams/: algorithm-flowcharts.md  composition-relationships.puml  factory-patterns.puml  memory-layouts.puml  module-dependencies.dot
fuzz/: fuzz_hash_map.c  fuzz_matrix.c  fuzz_sort.c
include/: bloom_filter.h  deque.h  graph.h  heap.h  linear.h  list.h  map.h  matrix.h  memory_pool.h  ova.h  queue.h  set.h  skip_list.h  solver.h  sort.h  stack.h  tree.h  trie.h  types.h
src/bloom_filter/: bloom_filter.c
src/deque/: deque.c
src/graph/: adjacency_list.c  adjacency_matrix.c  graph.c  graph_algorithms.c  graph_internal.h
src/heap/: binary_heap.c  binary_heap.h  fibonacci_heap.c  fibonacci_heap.h  heap.c
src/linear/: linear.c
src/list/: array_list.c  array_list.h  linked_list.c  linked_list.h  list.c  sorted_list.c  sorted_list.h
src/map/: hash_map.c  hash_map.h  map.c  map_internal.h
src/matrix/: matrix.c  matrix_internal.h
src/memory_pool/: memory_pool.c
src/queue/: heap_queue.c  heap_queue.h  linked_queue.c  linked_queue.h  queue.c  queue_internal.h
src/set/: hash_set.c  set.c  set_internal.h  tree_set.c
src/skip_list/: skip_list.c
src/solver/: branch_and_bound.c  branch_and_bound.h  branch_and_cut.c  branch_and_cut.h  lagrangean.c  lagrangean.h  simplex.c  simplex.h  solver.c  solver_internal.h
src/sort/: sort.c
src/stack/: array_stack.c  array_stack.h  linked_stack.c  linked_stack.h  stack.c
src/tree/: avl_tree.c  red_black_tree.c  tree.c  tree_internal.h
src/trie/: trie.c
src/utils/: capacity_utils.h
test/: base_test.c  base_test.h  property_test.h  test_array_list.c  test_array_stack.c  test_avl_tree.c  test_binary_heap.c  test_bloom_filter.c  test_clear.c  test_clone.c  test_deque.c  test_fibonacci_heap.c  test_graph.c  test_graph_algorithms.c  test_hash.c  test_linear.c  test_linked_list.c  test_linked_stack.c  test_matrix.c  test_matrix_extra.c  test_memory_pool.c  test_priority_queue.c  test_property.c  test_queue.c  test_red_black_tree.c  test_set.c  test_skip_list.c  test_solver.c  test_sorted_list.c  test_sorter.c  test_trie.c  test_user_data.c  test_vector_simd.c
